--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -1,6 +1,7 @@
     <ion-header-bar class="bar-dark">
+    <i class="icon ion-unlocked"></i>
       <div class="buttonsdiv">
-        <i class="icon ion-unlocked"></i>
+        <!-- <i class="icon ion-unlocked"></i> -->
 
         <a href="#/settings" class="button button-outline button-small" id="btn-styling">
             <i class="icon ion-gear-b"></i> Settings
