--- a/aac-ionic/scss/ionic.app.scss
+++ b/aac-ionic/scss/ionic.app.scss
@@ -495,6 +495,14 @@ button#btn-styling.button.button-outline.button-calm.button-small{
   &.ion-chevron-right{
     font-size: 1.4em;
   }
+
+  &.ion-ios-search{
+    font-size: 1.75em;
+  }
+
+  &.ion-play{
+    font-size: 1.5em;
+  }
 }
 
 .icon{
