--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -379,6 +379,10 @@ button#btn-styling.button.button-outline.button-calm.button-small {
     color: #008485; }
   .icon.ion-chevron-right {
     font-size: 1.4em; }
+  .icon.ion-ios-search {
+    font-size: 1.75em; }
+  .icon.ion-play {
+    font-size: 1.5em; }
 
 .icon {
   font-size: 2.5em; }
