more minor style changes: fixed search icon

--- a/aac-ionic/scss/ionic.app.scss
+++ b/aac-ionic/scss/ionic.app.scss
@@ -500,7 +500,7 @@ button#btn-styling.button.button-outline.button-calm.button-small{
     font-size: 1.75em;
   }
 
-  &.ion-play{
+  &.ion-play, &.ion-search{
     font-size: 1.5em;
   }
 }
