--- a/aac-ionic/scss/ionic.app.scss
+++ b/aac-ionic/scss/ionic.app.scss
@@ -396,7 +396,7 @@ button#btn-styling.button.button-outline.button-calm.button-small.selected-btn2{
   border-color: $speak-agent-dark-blue;
   border-radius: 20px;
   color: $speak-agent-dark-blue;
-  padding:5px;
+  // padding:5px;
   font-weight:600;
   box-shadow: 0px 3px 0px 0px;
 }
@@ -510,6 +510,10 @@ button#btn-styling.button.button-outline.button-calm.button-small.selected-btn2{
 
   &.ion-play, &.ion-search{
     font-size: 1.5em;
+  }
+
+  &.ion-search{
+    font-size: 1.25em;
   }
 }
 
