--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -304,7 +304,6 @@ button#btn-styling.button.button-outline.button-calm.button-small.selected-btn2 
   border-color: #008485;
   border-radius: 20px;
   color: #008485;
-  padding: 5px;
   font-weight: 600;
   box-shadow: 0px 3px 0px 0px; }
 
@@ -391,6 +390,8 @@ button#btn-styling.button.button-outline.button-calm.button-small.selected-btn2 
     font-size: 1.75em; }
   .icon.ion-play, .icon.ion-search {
     font-size: 1.5em; }
+  .icon.ion-search {
+    font-size: 1.25em; }
 
 .icon {
   font-size: 2.5em; }
