--- a/aac-ionic/www/templates/sample_edit.html
+++ b/aac-ionic/www/templates/sample_edit.html
@@ -8,7 +8,7 @@
     <button class="button button-outline button-calm button-small" id="selected-btn">
       <i class="icon ion-grid"></i><a href="#/board_factory">Board Factory</a>
       <br>
-      <p class="show-hide-label">*Requires Wifi</p>
+      <p class="show-hide-label" style="color:white;">*Requires Wifi</p>
     </button>
     <button class="button button-outline button-calm button-small" id="btn-styling" style="margin-right:10px;">
           <!-- <i class="icon ion-eye-disabled"></i>  -->
@@ -51,7 +51,7 @@
             <div class="yellow-dot" ng-show="board.title == 'About Me'"></div>
             <span ng-show="filled_tiles.indexOf(col+row)!=-1">
               <p>{{board.symbols[col+row].word | limitTo: titleLimit}} <span ng-show="board.symbols[col+row].word.length > titleLimit">...</span></p>
-              <img src="{{board.symbols[col+row].symbol.image}}" style="width:40px;height:40px; position:relative; z-index:0; margin-bottom:-10px;">
+              <img src="{{board.symbols[col+row].symbol.image}}" style="width:40px;height:40px; position:relative; z-index:0; margin-bottom:-10px; margin-top:-10px;">
             </span>
           </div>
 
