--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -87,12 +87,12 @@
             </div>
 
             <div class="col col-40" id="board-section" style="margin-top:-43px;">
-              <div class="boards" ng-repeat="board in dummyBoards | slice:start:end" ng-click="chosenBoard($index)">
+              <div class="boards" ng-repeat="board in dummyBoards | slice:start:end" ng-click="chosenBoard($index); selectedBoardTile($index)">
                   <p style="position:fixed; z-index:3; margin-top:25px; margin-left:15px;" ng-model="titleLimit">{{board.name | limitTo: titleLimit}} <span ng-show="board.name.length > titleLimit">...</span></p>
 
                   <img ng-src="{{board.img_path}}" alt="image" ng-click="sayWord()" style="width:65%; height:65%; position:relative; z-index:2; margin-bottom:-70px;"\>
 
-                  <img src="img/new_dev_assets/board_tile_notched_default_yellow.svg" style="positon:relative; z-index:0;" alt="board tile">
+                  <img src="img/new_dev_assets/board_tile_notched_default_1.svg" style="positon:relative; z-index:0;" alt="board tile" name="{{$scope.queryValue}}">
                 <!-- </div> -->
               </div>
             </div>
