--- a/aac-ionic/scss/ionic.app.scss
+++ b/aac-ionic/scss/ionic.app.scss
@@ -821,6 +821,11 @@ input[type="text"]:focus, textarea:focus{
   border-color:white;
 }
 
+.tile.lightBlue{
+  background-color:#83EFF0;
+  border-color:white;
+}
+
 .title-section, .symbol-section, .tag-section{
   padding-bottom:20px;
 }
