--- a/aac-ionic/scss/ionic.app.scss
+++ b/aac-ionic/scss/ionic.app.scss
@@ -816,7 +816,7 @@ input[type="text"]:focus, textarea:focus{
     background-color: #000;
 }
 
-.title.lightBlue{
+.tile.lightBlue{
   background-color:#83EFF0;
   border-color:white;
 }
