--- a/aac-ionic/scss/ionic.app.scss
+++ b/aac-ionic/scss/ionic.app.scss
@@ -593,6 +593,7 @@ input[type="text"]:focus, textarea:focus{
 
 .tile-words{
   line-height: 100%;
+  letter-spacing: .5px;
   margin-bottom: -16px;
   margin-top:2px;
 }
