commented out testing code

--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -76,22 +76,24 @@
             <div class="col col-60" id="tile-section">
               <div class="tile-section-border">
 
-                <div class="tile" ng-repeat="item in longWords">
+                <!-- <div class="tile" ng-repeat="item in longWords">
                   <span>
                     <p class="tile-words">{{item.word}}</p>
                     <br>
                     <img src="{{item.image}}" alt="testing image" style="width:40px;height:40px">
                   </span>
-                </div> 
+                </div>  -->
 
-                <!-- <span ng-repeat="row in rows">
+                <span ng-repeat="row in rows">
                   <div class="tile" ng-repeat="col in columns" ng-click="clickTile(board.symbols[col+row]); sayWord()"  ng-class="{lightBlue:board.symbols[col+row]==selectedIndex}";>
                     <span ng-show="filled_tiles.indexOf(col+row)!=-1">
-                      {{board.symbols[col+row].word | limitTo: titleLimit}}<span ng-show="board.symbols[col+row].word.length > titleLimit">...</span><br>
+                      <p class="tile-words">{{board.symbols[col+row].word | limitTo: titleLimit}}
+                        <!-- <span ng-show="board.symbols[col+row].word.length > titleLimit">...</span> -->
+                        <br>
                       <img src="{{board.symbols[col+row].symbol.image}}" style="width:40px;height:40px">
                     </span>
                   </div>
-                </span> -->
+                </span>
 
               </div>
             </div>
