--- a/aac-ionic/scss/ionic.app.scss
+++ b/aac-ionic/scss/ionic.app.scss
@@ -282,11 +282,21 @@ button#btn-styling.button.button-outline.button-calm.button-small.selected-btn2{
   margin-left:20px;
 }
 
-#button-circle2{
+.button-circle2{
   width:75px;
   height:75px;
   background-color: #008485;
   border-radius: 37.5px;
+}
+
+// .button-circle2.yellow{
+//   border: 5px solid #F8D338;
+// }
+.yellow{
+  border: 5px solid #F8D338;
+  width: 80px;
+  height:80px;
+  border-radius:40px;
 }
 
 .buttonsdiv{
