--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -209,11 +209,17 @@ button#btn-styling.button.button-outline.button-calm.button-small.selected-btn2 
   float: left;
   margin-left: 20px; }
 
-#button-circle2 {
+.button-circle2 {
   width: 75px;
   height: 75px;
   background-color: #008485;
   border-radius: 37.5px; }
+
+.yellow {
+  border: 5px solid #F8D338;
+  width: 80px;
+  height: 80px;
+  border-radius: 40px; }
 
 .buttonsdiv {
   margin-left: 20px; }
