--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -1,10 +1,10 @@
-    <ion-header-bar class="bar-dark">
+  <ion-header-bar class="bar-dark">
     <i class="icon ion-unlocked"></i>
       <div class="buttonsdiv">
         <!-- <i class="icon ion-unlocked"></i> -->
 
         <a href="#/settings" class="button button-outline button-small" id="btn-styling">
-            <i class="icon ion-gear-b"></i> Settings
+          <i class="icon ion-gear-b"></i> Settings
         </a>
 
         <a href="#/board_factory" class="button button-outline button-small" id="btn-styling">
@@ -114,7 +114,7 @@
 <!-- Bottom function buttons -->
         <div class="row" id="btn-section">
           <div class="col col-10" id="home-button-section">
-            <div class="button-circle2" ng-click="defaultBoard()" ng-class="class">
+            <div class="button-circle2" ng-click="getData()" ng-class="class">
               <img src="img/new_dev_assets/home.png" style="margin-left:15px; margin-top:12px;" />
             </div>
           </div>
