separated classes from the hide tiles and home button

--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -14,7 +14,7 @@
           <p class="show-hide-label">*Requires Wifi</p>
         </a>
 
-        <button class="button button-outline button-calm button-small" id="btn-styling" ng-click="activeHide()" ng-class="class">
+        <button class="button button-outline button-calm button-small" id="btn-styling" ng-click="activeHide()" ng-class="class1">
           <i class="icon ion-eye-disabled" ng-show="selectedBtn2 == true"></i>
           <i class="icon ion-eye-disabled" ng-show="selectedBtn2 == false" style="color:white;"></i>
           <span class="hide-label" ng-show="selectedBtn2 == true">Hide Tiles</span>
