--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -117,7 +117,7 @@
             </div>
 
             <div class="button-circle">
-              <img src="img/new_dev_assets/avatar.png" style="margin-left:15px; margin-top:14px;" />
+              <img src="img/new_dev_assets/avatar.png" style="margin-left:15px; margin-top:14px;" ng-click="openBuddyModal()"/>
             </div>
 
             <div class="button-circle">
@@ -132,4 +132,3 @@
         </div>
       </ion-content>
     </ion-view>
-  
