Adding few things

--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -71,6 +71,7 @@
                 <img src="img/AAC_assets/delete_button.png" id="home-section"
                   ng-click="deleteLastTile()" />
               </div>
+              <img ng-src="{{chatBuddy[0].url}}" ng-show="myvalue" alt="image" style="float: right;margin-top: -95px;width: 12%;"/>
             </div>
 
             <div class="col col-60" id="tile-section">
@@ -121,7 +122,7 @@
             </div>
 
             <div class="button-circle">
-              <img src="img/new_dev_assets/chat.png" style="margin-left:15px; margin-top:14px;" />
+              <img src="img/new_dev_assets/chat.png" style="margin-left:15px; margin-top:14px;"  ng-click="activateChat()"/>
             </div>
           </div>
 
