--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -101,15 +101,15 @@
             <div class="col col-40" id="board-section" style="margin-top:-43px;">
               <div class="boards" ng-repeat="board in longWords | slice:start:end">
 
-                <p style="position:fixed; z-index:3; margin-top:25px; margin-left:5px;" ng-model="titleLimit" ng-if="board.word.length <= 10">
+                <p style="position:fixed; z-index:3; margin-top:25px; margin-left:5px; letter-spacing: .5px;" ng-model="titleLimit" ng-if="board.word.length <= 10">
                   {{board.word | limitTo:titleLimit}}
                 </p>
 
-                <p style="position:fixed; z-index:3; margin-top:20px; margin-left:5px;" ng-model="titleLimit" ng-if="board.word.length > 10">
+                <p style="position:fixed; z-index:3; margin-top:22px; margin-left:5px; letter-spacing: .5px;"  ng-model="titleLimit" ng-if="board.word.length > 10">
                   {{board.word | breaking}}
                 </p>
 
-                <p style="position:fixed; z-index:3; margin-top:30px; margin-left:5px;" ng-model="titleLimit" ng-if="board.word.length > 10">
+                <p style="position:fixed; z-index:3; margin-top:30px; margin-left:5px; letter-spacing: .5px;" ng-model="titleLimit" ng-if="board.word.length > 10">
                   {{board.word | breaking2}}
                 </p>
 
