--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -434,10 +434,10 @@ input[type="text"]:focus, textarea:focus {
 .item .green-blue {
   border-color: #65e5e6; }
 
-.item .item-input {
+.item.item-input {
   padding: 0px;
   margin-top: -2px; }
-  .item .item-input .none {
+  .item.item-input.none {
     outline: none;
     border-style: none;
     margin: -16px; }
@@ -633,6 +633,14 @@ input[type="text"]:focus, textarea:focus {
   background-color: #000; }
 
 .title.lightBlue {
+  background-color: #83EFF0;
+  border-color: white; }
+
+.tile.lightBlue {
+  background-color: #83EFF0;
+  border-color: white; }
+
+.lightBlue {
   background-color: #83EFF0;
   border-color: white; }
 
