--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -76,7 +76,7 @@
             <div class="col col-60" id="tile-section">
               <div class="tile-section-border">
                 <span ng-repeat="row in rows">
-                  <div class="tile" ng-repeat="col in columns" ng-click="clickTile(board.symbols[col+row]); sayWord();"  ng-class="{lightBlue:board.symbols[col+row]==selectedIndex3}";>
+                  <div class="tile" ng-repeat="col in columns" ng-click="clickTile(board.symbols[col+row]); sayWord();"  ng-class="{lightBlue:board.symbols[col+row]==selectedIndex}";>
                     <span ng-show="filled_tiles.indexOf(col+row)!=-1">
                       {{board.symbols[col+row].word | limitTo: titleLimit}}<span ng-show="board.symbols[col+row].word.length > titleLimit">...</span><br>
                       <img src="{{board.symbols[col+row].symbol.image}}" style="width:40px;height:40px">
@@ -92,7 +92,10 @@
 
                   <img ng-src="{{board.img_path}}" alt="image" ng-click="sayWord()" style="width:65%; height:65%; position:relative; z-index:2; margin-bottom:-70px;"\>
 
-                  <img src="img/new_dev_assets/board_tile_notched_default_1.svg" style="positon:relative; z-index:0;" alt="board tile" name="{{$scope.queryValue}}">
+                  <img id="selection{$index}" src="img/new_dev_assets/board_tile_notched_default_1.svg" style="positon:relative; z-index:0;" alt="board tile" name="{{$scope.queryValue}}">
+                  
+                  <!-- <img src="img/new_dev_assets/board_tile_notched_default_yellow.svg" style="positon:relative; z-index:-1;" alt="board tile" name="{{$scope.queryValue}}" ng-show="!$index"> -->
+        
                 <!-- </div> -->
               </div>
             </div>
