--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -40,9 +40,11 @@
       <ion-content class= "appBody" id="bodyBack">
         <div class="row" id="regularRow">
           <div class="col col-10" id="regularRowBod">
-            <img src="img/AAC_assets/avatar_default.png"
-              ng-click="sayPhrase()"/>
-
+            <div id="avatar-bg-image" ng-click="sayPhrase()">
+              <div id="left-caret"></div>
+              <img ng-src="{{ userProfileInfo.image }}" alt="user-profile-img">
+            </div>
+            
             <div class="regulars">
               Yes
             </div>
