figured out how to tie index to an id and how to change image src, making div yellow

--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -92,7 +92,7 @@
 
                   <img ng-src="{{board.img_path}}" alt="image" ng-click="sayWord()" style="width:65%; height:65%; position:relative; z-index:2; margin-bottom:-70px;"\>
 
-                  <img id="selection{$index}" src="img/new_dev_assets/board_tile_notched_default_1.svg" style="positon:relative; z-index:0;" alt="board tile" name="{{$scope.queryValue}}">
+                  <img id="{{$index}}" src="img/new_dev_assets/board_tile_notched_default_1.svg" style="position:relative; z-index:0;" alt="board tile" name="{{$scope.queryValue}}">
                   
                   <!-- <img src="img/new_dev_assets/board_tile_notched_default_yellow.svg" style="positon:relative; z-index:-1;" alt="board tile" name="{{$scope.queryValue}}" ng-show="!$index"> -->
         
