Small change in style.css

--- a/aac-ionic/www/css/style.css
+++ b/aac-ionic/www/css/style.css
@@ -8,7 +8,7 @@
 	background: url('../img/AAC_assets/avatar_default.png') no-repeat;
 	margin-top: 4px;
 	margin-bottom: 5px;
-	width: 98px;
+	width: 106%;
 	background-size: 83px 83px;
 	height: 85px;
 }
