--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -121,7 +121,7 @@
 <!-- Bottom function buttons -->
         <div class="row" id="btn-section">
           <div class="col col-10" id="home-button-section">
-            <div class="button-circle2 yellow" ng-click="mainBoardLoader($index=0, board.pk=3)" ng-class="class">
+            <div class="button-circle2" ng-click="mainBoardLoader($index=0, board.pk=3)" ng-class="class">
               <img src="img/new_dev_assets/home.png" style="margin-left:15px; margin-top:12px;" />
             </div>
           </div>
