--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -63,7 +63,7 @@
           <div class="col col-90" id="full-body">
             <div class="word-builder">
               <div class="word-builder-input" style="margin-left:-15px">
-                <div class="tile" ng-repeat="symbol in selectedTiles">
+                <div class="tile" ng-repeat="symbol in selectedTiles | limitTo: 7">
                   {{ symbol.word }}<br>
                   <img src = "{{symbol.symbol.image}}"
                     style="width:40px;height:40px">
@@ -109,9 +109,9 @@
                   <img id="{{$index}}" style="position:relative; z-index:0;" class="board-tile" alt="board tile" name="{{$scope.queryValue}}" src="img/new_dev_assets/board_tile_notched_default_1.svg">
                   <!-- src="img/new_dev_assets/board_tile_notched_default_1.svg" -->
                   <!-- id="{{$index}}" -->
-                  
+
                   <!-- <img src="img/new_dev_assets/board_tile_notched_default_yellow.svg" style="positon:relative; z-index:-1;" alt="board tile" name="{{$scope.queryValue}}" ng-show="!$index"> -->
-        
+
                 <!-- </div> -->
               </div>
             </div>
@@ -151,4 +151,3 @@
         </div>
       </ion-content>
     </ion-view>
-  
