--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -85,7 +85,7 @@
                 </div>  -->
 
                 <span ng-repeat="row in rows">
-                  <div class="tile" ng-repeat="col in columns" ng-click="clickTile(board.symbols[col+row]); sayWord();"  ng-class="{lightBlue:board.symbols[col+row]==selectedIndex}";>
+                  <div class="tile" ng-repeat="col in columns" ng-click="clickTile(board.symbols[col+row]); sayWord();"  ng-class="{selectedTile:board.symbols[col+row]==selectedIndex}";>
                     <span ng-show="filled_tiles.indexOf(col+row)!=-1">
                       <p class="tile-words">{{board.symbols[col+row].word | limitTo: titleLimit}}</p>
                         <!-- <span ng-show="board.symbols[col+row].word.length > titleLimit">...</span> -->
@@ -109,9 +109,9 @@
                   <img id="{{$index}}" style="position:relative; z-index:0;" class="board-tile" alt="board tile" name="{{$scope.queryValue}}" src="img/new_dev_assets/board_tile_notched_default_1.svg">
                   <!-- src="img/new_dev_assets/board_tile_notched_default_1.svg" -->
                   <!-- id="{{$index}}" -->
-                  
+
                   <!-- <img src="img/new_dev_assets/board_tile_notched_default_yellow.svg" style="positon:relative; z-index:-1;" alt="board tile" name="{{$scope.queryValue}}" ng-show="!$index"> -->
-        
+
                 <!-- </div> -->
               </div>
             </div>
@@ -151,4 +151,3 @@
         </div>
       </ion-content>
     </ion-view>
-  
