--- a/aac-ionic/www/templates/login.html
+++ b/aac-ionic/www/templates/login.html
@@ -12,11 +12,11 @@
                         </p>
                         <form ng-submit="doLogin()">
                             <div class="list list-inset">
-                                <label class="item item-input">
-                                    <input type="text" placeholder="Username"  ng-model="loginData.username">
+                                <label class="item item-input login-label">
+                                    <input type="text" placeholder="Username" class="login-input" ng-model="loginData.username">
                                 </label>
                                 <label class="item item-input">
-                                    <input type="password" placeholder="Password" ng-model="loginData.password">
+                                    <input type="password" placeholder="Password" class="login-input" ng-model="loginData.password">
                                 </label>
                             </div>
                             <button class="button button-block button-balanced" type="submit">
