--- a/aac-ionic/www/css/login.css
+++ b/aac-ionic/www/css/login.css
@@ -26,7 +26,7 @@
     margin: 0px !important;
 }
 
-login-input:focus {
+.login-input:focus {
     background: none!important;
     box-shadow: none!important;
     border: none!important;
