Basic stuff pulled over from other branch

--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -70,7 +70,10 @@
                 </div>
                 <img src="img/AAC_assets/delete_button.png" id="home-section"
                   ng-click="deleteLastTile()" />
+                  <!-- <img src="img/AAC_assets/avatar_button.png" id="home-section"
+                  ng-click="callBuddy()" /> -->
               </div>
+              
             </div>
 
             <div class="col col-60" id="tile-section">
